button color updated

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="link-box">
             <a href=""><button>About</button></a>
             <a href=""><button>GitHub</button></a>
-            <a href=""><button>Resume</button></a>
+            <a href="resume.html"><button>Resume</button></a>
             
         </div>
         
