--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <!--<div class="nav"></div>-->
+    <div class="nav">
+        <h1>Brian White</h1>
+        <h4>Web Developer</h4>
+    </div>
 
     <div class="wrapper">
         <div class="link-box">
