--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <div class="wrapper">
         <div class="link-box">
-            <a href=""><button>About</button></a>
-            <a href=""><button>GitHub</button></a>
+            <a href="about.html"><button>About</button></a>
+            <a href="https://github.com/brianwhite082189/tajin"><button>GitHub</button></a>
             <a href="resume.html"><button>Resume</button></a>
             
         </div>
