--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
     <div class="nav button">
         <a href="index.html"><button>Home</button></a>
         <a href=""><button>About</button></a>
-        <a href=""><button>GitHub</button></a>
+        <a href="https://github.com/brianwhite082189/tajin"><button>GitHub</button></a>
     </div>
 
 <div class ="wrapper">
