text content added and formatted

--- a/about.html
+++ b/about.html
@@ -13,9 +13,12 @@
         <a href="https://github.com/brianwhite082189/tajin"><button>GitHub</button></a>
     </div>
     <div class="wrapper">
+        <p class="name">Brian White</p>
         <div class="img">
             <img src="Brian.JPG" alt="Photo of author">
         </div>
+        <h4>Who am I?</h4>
+        <p class="blurb">I am Brian White. I am 33 years old and currently work as a nurse. I am married with a 2 year old daughter. I am aspiring to be a software developer. I enjoy solving problems that can actually be solved even if they are complex. I enjoy seeing a tangible outcome from my work. In my porfolio I have projects that I have worked on here and there as time and work have permitted. They can be seen by clicking on the gitHub button in my nav bar. I will continue to improve upon my existing code as well as continue learning and creating new projects. I am excited to see what this journey has in store for my life and the opporotunities I will have to make a true difference in the world.</p>
 
     </div>
 </body>
