--- a/resume.html
+++ b/resume.html
@@ -9,7 +9,7 @@
 <body>
     <div class="nav button">
         <a href="index.html"><button>Home</button></a>
-        <a href=""><button>About</button></a>
+        <a href="about.html"><button>About</button></a>
         <a href="https://github.com/brianwhite082189/tajin"><button>GitHub</button></a>
     </div>
 
