--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <div class="nav button">
         <a href="index.html"><button>Home</button></a>
         <a href="resume.html"><button>Resume</button></a>
-        <a href="https://github.com/brianwhite082189/tajin"><button>GitHub</button></a>
+        <a href="https://github.com/brianwhite082189/tajin" target="_blank"><button>GitHub</button></a>
     </div>
     <div class="wrapper">
         <p class="name">Brian White</p>
