--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="wrapper">
         <div class="link-box">
             <a href="about.html"><button>About</button></a>
-            <a href="https://github.com/brianwhite082189/tajin"><button>GitHub</button></a>
+            <a href="https://github.com/brianwhite082189/tajin" target="_blank"><button>GitHub</button></a>
             <a href="resume.html"><button>Resume</button></a>
             
         </div>
