some media queries added

--- a/Portfolio/about.html
+++ b/Portfolio/about.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="nav button">
+    <div class="nav button responsive">
         <a href="index.html"><button>Home</button></a>
         <a href="resume.html"><button>Resume</button></a>
         <a href="https://github.com/brianwhite082189/tajin" target="_blank"><button>GitHub</button></a>
